--- a/mappings.json
+++ b/mappings.json
@@ -1,5 +1,5 @@
 {
-    "params.project": "ls-africa-data-eu-dev",
+    "params.project": "ls-africa-data-eu-${env}",
     "params.web_project": "livescore-web"
 }
 
