--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,4 +25,4 @@ jobs:
       run: go build -v -o bqt ./src/main/main.go
 
     - name: Test
-      run: go test -v 
+      run: go test -v ./src/main
